--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+@import "fontsource/sora/index.css";
+
 body{
     min-height: 100vh;
     display: flex;
@@ -10,38 +13,75 @@ body{
     justify-content: center;
     align-items: center;
     background-color: #FAFAF9;
-    font-family: Arial, sans-serif;
+    font-family: "Sora", sans-serif;
     font-size: 14px;
-   
 }
 
-.tag {
-    background-color: #F2EAFD;
-    color: #7C19EE;
-    font-size: 10px;
-}
-
-h1 {
-    font-size: 18px;;
-}
-
-.blog-text {
-    font-size: 12px;
+.page-wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .container {
-    width: 336px;
-    height: auto;
-    margin-top: 164px;
-    text-align: justify;
+    padding: 16px 16px 20px 16px;
     background-color: #FFFFFF;
-    margin-left: 400px;
-    
+    margin-top: 164px;
+    border-radius: 16px;
+    box-shadow: 8px 8px 20px 0px rgba(85, 85, 85, 0.08);
+    overflow: hidden;
+    transition: transform 0.3s ease;
 }
 
+.container:hover{
+    transform: translateY(-5px);
+}
+
+.section {
+    width: 336px;
+    text-align: justify;
+
+}
+
+.section img{
+    width: 336px;
+    height: 152px;
+    border-radius: 10px;
+    margin-bottom: 16px;
+}
+
+.tag {
+    display: inline-block;
+    background-color: #F2EAFD;
+    color: #6410CB;
+    font-size: 10px;
+    font-weight:700;
+    padding: 6px 16px;
+    border-radius: 999px;
+    margin-bottom: 16px;
+}
+
+h1 {
+    font-size: 18px;
+    font-weight: 700;
+    color: #20293A;
+    margin-bottom: 6px;
+}
+
+.blog-text {
+    font-size: 14px;
+    font-weight: 400;
+    margin-bottom: 20px;
+    color: #6b7280;
+    line-height: 1.4;
+}
+
+
 .blog-footer{
-    border-top:1px solid #E5EAF0;
-    margin-bottom: 20px
+    border-top: 1px solid #E5EAF0;
+    padding: 12px 0 0 0;
+    font-size: 12px;
+    color: #6b7280;
 }
 
 .author-info {
@@ -50,6 +90,7 @@ h1 {
     margin-top: 166px;
     color: rgb(55, 65, 81);
     position:relative;
+    margin-bottom: 65px;
 }
 
 .author-info a {
@@ -59,3 +100,4 @@ text-decoration: none;
 .author-info a:hover {
 text-decoration: underline;
 }
+
