--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
+@import "fontsource/sora/index.css";
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-@import "fontsource/sora/index.css";
+
 
 body{
     min-height: 100vh;
@@ -21,6 +23,8 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+   justify-content: center;
+   align-items: center;;
 }
 
 .container {
